--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,22 +41,15 @@ jobs:
           node-version: "20"
           cache: ${{ steps.pm.outputs.manager }}
 
-      # This will auto-set basePath/assetPrefix and disable server-side image opt at build time.
-      # Remove if you manage next.config.js yourself.
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: next
-
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx', '**/*.mdx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
-      - name: Install dependencies
+      - name: Install deps
         run: ${{ steps.pm.outputs.manager }} ${{ steps.pm.outputs.install }}
 
       - name: Build
@@ -65,7 +58,6 @@ jobs:
       - name: Export static site
         run: ${{ steps.pm.outputs.runner }} next export
 
-      # Prevent any accidental Jekyll processing if someone switches Page source later.
       - name: Add .nojekyll
         run: touch out/.nojekyll
 
